force-app/main/default/objects/Opportunity/fields/Account_manager__c.field-meta.xml
<CustomField>
    <fullName>Account_manager__c</fullName>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>