force-app/main/default/objects/Opportunity/fields/Action_Plan5lines__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan5lines__c</fullName>
    <defaultValue>&quot;a) Action, Responsible, Deadline...&quot;</defaultValue>
    <inlineHelpText>&quot;a) Action, Responsible, Deadline...&quot;</inlineHelpText>
    <label>Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>