force-app/main/default/objects/Opportunity/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>