force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <inlineHelpText>Marked by the system on the date the Opp is first moved to a &quot;Won&quot; Stage.</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>