force-app/main/default/objects/Opportunity/fields/Adform_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Adform_Campaign_ID__c</fullName>
    <label>Adform Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>