force-app/main/default/objects/Opportunity/fields/AdForm_Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>AdForm_Products_of_Interest__c</fullName>
    <inlineHelpText>If this Opportunity derived from a Lead record conversion, the values here can be used to populate initial Opportunity Product records.</inlineHelpText>
    <label>AdForm Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Rich Media</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>