force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>CASE( 
RecordType.Name, 
&quot;IO Initial&quot;, &quot;Pre-Approval&quot;, 
&quot;IO Initial - Approved&quot;, &quot;Approved&quot;, 
&quot;IO Renewal&quot;, &quot;Pre-Approval&quot;, 
&quot;IO Renewal - Approved&quot;, &quot;Approved&quot;, 
&quot;IO Upsell&quot;, &quot;Pre-Approval&quot;, 
&quot;IO Upsell - Approved&quot;, &quot;Approved&quot;, 
&quot;MSA Initial&quot;, &quot;Pre-Approval&quot;, 
&quot;MSA Initial - Approved&quot;, &quot;Approved&quot;, 
&quot;MSA Renewal&quot;, &quot;Pre-Approval&quot;, 
&quot;MSA Renewal - Approved&quot;, &quot;Approved&quot;, 
&quot;MSA Upsell&quot;, &quot;Pre-Approval&quot;, 
&quot;Approved&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an automatically generated field using the Record Type and used in the Dynamic Naming of the Opportunity.</inlineHelpText>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>