force-app/main/default/objects/Opportunity/fields/Bill_this_client__c.field-meta.xml
<CustomField>
    <fullName>Bill_this_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify billing</description>
    <inlineHelpText>Only checked clients will be billed</inlineHelpText>
    <label>Bill this client</label>
    <type>Checkbox</type>
</CustomField>