force-app/main/default/objects/Opportunity/fields/Brand_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Brand_Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand/Advertiser (look up)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Advertiser</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Brand/Advertiser)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>