force-app/main/default/objects/Opportunity/fields/Brand_Advertiser_Text__c.field-meta.xml
<CustomField>
    <fullName>Brand_Advertiser_Text__c</fullName>
    <label>Brand/Advertiser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>