force-app/main/default/objects/Opportunity/fields/Brand_Solution__c.field-meta.xml
<CustomField>
    <fullName>Brand_Solution__c</fullName>
    <label>Brand Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Build</fullName>
            </value>
            <value>
                <fullName>Custom Build</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>HTML5</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>