force-app/main/default/objects/Opportunity/fields/Campaign_Format__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Format__c</fullName>
    <label>Campaign Format</label>
    <length>200</length>
    <type>Text</type>
</CustomField>