force-app/main/default/objects/Opportunity/fields/Client_Reference_No_or_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference_No_or_Order_ID__c</fullName>
    <label>Client Reference No. or Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>