force-app/main/default/objects/Opportunity/fields/Client_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Client_Stakeholders__c</fullName>
    <label>Client Stakeholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>