force-app/main/default/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <label>Close Month 2</label>
    <summarizedField>OpportunityLineItem.X1_Month__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.LastModifiedDate</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2016 2:00 PM</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.LastModifiedDate</field>
        <operation>lessOrEqual</operation>
        <value>1/30/2017 2:00 PM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>