force-app/main/default/objects/Opportunity/fields/Closure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closure_Notes__c</fullName>
    <inlineHelpText>Once this Opportunity reaches the Stage &quot;Closed/Won&quot;, or &quot;Closed/Lost&quot;, this is the field for a narrative on what occurred to warrant the closure.</inlineHelpText>
    <label>Closure Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>