force-app/main/default/objects/Opportunity/fields/Commercial_Sales_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Sales_Barriers__c</fullName>
    <label>Commercial Sales Barriers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>