force-app/main/default/objects/Opportunity/fields/Consultancy_Partner__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Partner__c</fullName>
    <label>Consultancy Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>McKinsey</fullName>
            </value>
            <value>
                <fullName>BCG</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Bain &amp; Company</fullName>
            </value>
            <value>
                <fullName>CapGemini</fullName>
            </value>
            <value>
                <fullName>Future Marketing</fullName>
            </value>
            <value>
                <fullName>Stack I/O</fullName>
            </value>
            <value>
                <fullName>Stream 20</fullName>
            </value>
            <value>
                <fullName>Reply</fullName>
            </value>
            <value>
                <fullName>Eley Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>