force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Default is standard, but if any Opportunity Products attached to this Opportunity have been marked with Terms = &quot;Non-Standard&quot;, this value will be &quot;Non-Standard&quot; for the Opportunity as a whole.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>