force-app/main/default/objects/Opportunity/fields/CPM_Price__c.field-meta.xml
<CustomField>
    <fullName>CPM_Price__c</fullName>
    <description>Price per 1000 impressions</description>
    <inlineHelpText>Price per 1000 impressions</inlineHelpText>
    <label>CPM Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>