force-app/main/default/objects/Opportunity/fields/Creative_Agency__c.field-meta.xml
<CustomField>
    <fullName>Creative_Agency__c</fullName>
    <label>Creative Agency</label>
    <length>17</length>
    <type>Text</type>
</CustomField>