force-app/main/default/objects/Opportunity/fields/Creative_design_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_design_URL__c</fullName>
    <inlineHelpText>Copy a link from Marvel app tool</inlineHelpText>
    <label>Creative design URL</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>