force-app/main/default/objects/Opportunity/fields/Display_Popup__c.field-meta.xml
<CustomField>
    <fullName>Display_Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Popup</label>
    <type>Checkbox</type>
</CustomField>