force-app/main/default/objects/Opportunity/fields/Global_Presales_Deal__c.field-meta.xml
<CustomField>
    <fullName>Global_Presales_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Presales Deal</label>
    <type>Checkbox</type>
</CustomField>