force-app/main/default/objects/Opportunity/fields/Goal_Q__c.field-meta.xml
<CustomField>
    <fullName>Goal_Q__c</fullName>
    <label>Goal Q</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1-2017</fullName>
            </value>
            <value>
                <fullName>Q2-2017</fullName>
            </value>
            <value>
                <fullName>Q3-2017</fullName>
            </value>
            <value>
                <fullName>Q4-2017</fullName>
            </value>
            <value>
                <fullName>Q1-2018</fullName>
            </value>
            <value>
                <fullName>Q2-2018</fullName>
            </value>
            <value>
                <fullName>Q3-2018</fullName>
            </value>
            <value>
                <fullName>Q4-2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>