force-app/main/default/objects/Opportunity/fields/Gross_amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_amount__c</fullName>
    <description>Enter gross amount (total media spend) in case revenue source is DSP.</description>
    <inlineHelpText>Enter gross amount (total media spend) in case revenue source is DSP.</inlineHelpText>
    <label>Gross amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>