force-app/main/default/objects/Opportunity/fields/Guaranteed_Revenue_Currency__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Revenue_Currency__c</fullName>
    <inlineHelpText>Roll-up total of the guaranteed revenue on all Product records attached to this Opportunity</inlineHelpText>
    <label>Guaranteed Revenue</label>
    <summarizedField>OpportunityLineItem.Guaranteed_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>