force-app/main/default/objects/Opportunity/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <label>Impressions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>