force-app/main/default/objects/Opportunity/fields/Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue__c</fullName>
    <inlineHelpText>Roll-up summary of Incremental Revenue value of all Product records linked to this Opportunity</inlineHelpText>
    <label>Incremental Revenue</label>
    <summarizedField>OpportunityLineItem.Incremental_Revenue_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>