force-app/main/default/objects/Opportunity/fields/Incremental_Revenue_Substract__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue_Substract__c</fullName>
    <formula>Amount  -  Guaranteed_Revenue_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>