force-app/main/default/objects/Opportunity/fields/Independent_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Independent_Group_Name__c</fullName>
    <label>Independent Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>