force-app/main/default/objects/Opportunity/fields/IO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IO_Start_Date__c</fullName>
    <label>IO Start Date</label>
    <type>Date</type>
</CustomField>