force-app/main/default/objects/Opportunity/fields/Legacy_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opp_Name__c</fullName>
    <inlineHelpText>Name manually entered, for Opps created before 2015 Feb 22 only.</inlineHelpText>
    <label>Legacy Opp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>