force-app/main/default/objects/Opportunity/fields/Next_steps_Issues__c.field-meta.xml
<CustomField>
    <fullName>Next_steps_Issues__c</fullName>
    <label>Next steps/Issues</label>
    <type>TextArea</type>
</CustomField>