force-app/main/default/objects/Opportunity/fields/Operational_Mode__c.field-meta.xml
<CustomField>
    <fullName>Operational_Mode__c</fullName>
    <label>Operational Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>via Agency</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>