force-app/main/default/objects/Opportunity/fields/Operational_service__c.field-meta.xml
<CustomField>
    <fullName>Operational_service__c</fullName>
    <label>Operational service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>