force-app/main/default/objects/Opportunity/fields/Opp_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Opp_Nickname__c</fullName>
    <inlineHelpText>shorthand manual name for this Opp.</inlineHelpText>
    <label>Opp Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>