force-app/main/default/objects/Opportunity/fields/Opportunity_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Nickname__c</fullName>
    <inlineHelpText>If a value is entered here, it overrides the standard dynamic naming for the Opportunity.</inlineHelpText>
    <label>Opportunity Nickname</label>
    <type>TextArea</type>
</CustomField>