force-app/main/default/objects/Opportunity/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <label>Opportunity Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>