force-app/main/default/objects/Opportunity/fields/Overall_Discount_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Overall_Discount_To_Apply__c</fullName>
    <inlineHelpText>Manual discount % applied to the overall order.  This requires approval is 40%</inlineHelpText>
    <label>Overall Discount % To Apply</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>