force-app/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Allows for the linking to a parent Opportunity. Required for Upsell and Renewal Opportunities</inlineHelpText>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Parent Opportunity</relationshipLabel>
    <relationshipName>Child_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>