force-app/main/default/objects/Opportunity/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary Agency/Agency Group1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Havas</fullName>
            </value>
            <value>
                <fullName>Dentsu Aegis Network</fullName>
            </value>
            <value>
                <fullName>Omnicom Media Group</fullName>
            </value>
            <value>
                <fullName>IPG Mediabrands</fullName>
            </value>
            <value>
                <fullName>Publicis</fullName>
            </value>
            <value>
                <fullName>WPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>