force-app/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Determined</fullName>
                <default>true</default>
                <label>Not Yet Determined</label>
            </value>
            <value>
                <fullName>Appnexus</fullName>
            </value>
            <value>
                <fullName>DataXu</fullName>
            </value>
            <value>
                <fullName>Doubleclick</fullName>
            </value>
            <value>
                <fullName>Flashtalking</fullName>
            </value>
            <value>
                <fullName>Mediamath</fullName>
            </value>
            <value>
                <fullName>Sizmek</fullName>
            </value>
            <value>
                <fullName>Turn</fullName>
            </value>
            <value>
                <fullName>Undertone</fullName>
            </value>
            <value>
                <fullName>Rubicon</fullName>
            </value>
            <value>
                <fullName>Pubmatic</fullName>
            </value>
            <value>
                <fullName>Improve Digital</fullName>
            </value>
            <value>
                <fullName>Adtech</fullName>
            </value>
            <value>
                <fullName>Smart</fullName>
            </value>
            <value>
                <fullName>Adition</fullName>
            </value>
            <value>
                <fullName>OpenX</fullName>
            </value>
            <value>
                <fullName>AdSlot</fullName>
            </value>
            <value>
                <fullName>iSocket</fullName>
            </value>
            <value>
                <fullName>ShinyAds</fullName>
            </value>
            <value>
                <fullName>Enreach</fullName>
            </value>
            <value>
                <fullName>The ADEX</fullName>
            </value>
            <value>
                <fullName>Krux</fullName>
            </value>
            <value>
                <fullName>Relay42</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>