force-app/main/default/objects/Opportunity/fields/PSX__c.field-meta.xml
<CustomField>
    <fullName>PSX__c</fullName>
    <label>PSX</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Greg Cristal</fullName>
            </value>
            <value>
                <fullName>Jakob Bak</fullName>
            </value>
            <value>
                <fullName>Luca Pellegrini</fullName>
            </value>
            <value>
                <fullName>Marcel Ehrlitzer</fullName>
            </value>
            <value>
                <fullName>Marc-Oliver Michel</fullName>
            </value>
            <value>
                <fullName>Nicolas Vittet</fullName>
            </value>
            <value>
                <fullName>Tracy Ruan</fullName>
            </value>
            <value>
                <fullName>Vaida Norvilaite</fullName>
            </value>
            <value>
                <fullName>Vjedka Poldervaart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>