force-app/main/default/objects/Opportunity/fields/Renewal_Number__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Only on Renewal type Opportunities. Shows the number of renewal. Reflected in custom Opportunity name</inlineHelpText>
    <label>Renewal Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>