force-app/main/default/objects/Opportunity/fields/Revenue_source__c.field-meta.xml
<CustomField>
    <fullName>Revenue_source__c</fullName>
    <label>Revenue source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>Rich Media</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Inventory integration (s2s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>