force-app/main/default/objects/Opportunity/fields/RFP_Needed__c.field-meta.xml
<CustomField>
    <fullName>RFP_Needed__c</fullName>
    <description>This field helps to identify if RFP is needed in opportunity</description>
    <inlineHelpText>RFP- request for proposal</inlineHelpText>
    <label>RFP Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>