force-app/main/default/objects/Opportunity/fields/RFP_Status__c.field-meta.xml
<CustomField>
    <fullName>RFP_Status__c</fullName>
    <description>Status of RFP file upload</description>
    <label>RFP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>