force-app/main/default/objects/Opportunity/fields/Service_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Service_Percentage__c</fullName>
    <label>Service %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>