force-app/main/default/objects/Opportunity/fields/Special_Terms_Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be checked by manager or Legal user, if this Opportunity has at least one Product with non-standard terms, and those terms have been added to the &quot;Note and Attachments&quot; Related List on this record.</inlineHelpText>
    <label>Special Terms Contract Attached</label>
    <type>Checkbox</type>
</CustomField>